memoize supplier values, check for required JVM arg